@@ -1,2 +1,1 @@
-Makefile
-plural.c
+*
