@@ -1,6 +1,7 @@
 ChangeLog
 Makefile
 Makefile.in
+Makefile.in.in
 POTFILES
 man-db.pot
 *.gmo
