@@ -1,4 +1,4 @@
-# man-db.config
+# man_db.conf
 #
 # This file is used by the man-db package to configure the man and cat paths.
 # It is also used to provide a manpath for those without one by examining
