@@ -632,6 +632,9 @@ mkcatdirs (const char *mandir, const char *catdir)
 {
 	char manname[PATH_MAX+6];
 	char catname[PATH_MAX+6];
+#ifdef SECURE_MAN_UID
+	struct passwd *man_owner = get_man_owner ();
+#endif
 
 	if (catdir) {
 		int oldmask = umask (022);
@@ -652,7 +655,7 @@ mkcatdirs (const char *mandir, const char *catdir)
 					 catdir);
 #ifdef SECURE_MAN_UID
 			if (ruid == 0)
-				chown (catdir, euid, 0);
+				chown (catdir, man_owner->pw_uid, 0);
 #endif /* SECURE_MAN_UID */
 			drop_effective_privs ();
 		}
@@ -680,7 +683,8 @@ mkcatdirs (const char *mandir, const char *catdir)
 						fprintf (stderr, " cat%d", j);
 #ifdef SECURE_MAN_UID
 					if (ruid == 0)
-						chown (catname, euid, 0);
+						chown (catname,
+						       man_owner->pw_uid, 0);
 #endif /* SECURE_MAN_UID */
 				}
 			}
